--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,7 +6,7 @@ body {
 .container {
     display: grid;
     grid-template-columns: 7% 93%;
-    grid-template-rows: 10% 90%;
+    grid-template-rows: 10% 1fr;
     height: 100%;
     grid-template-areas: "header header"
                          "nav movies"
